--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Jebi</title>
+    <title>Flask Boilerplate</title>
     <meta name="description" content="App">
 
     <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.png') }}">
